Fix typo in release script renaming (#48)

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -58,14 +58,13 @@ jobs:
     name: Upload executable binaries
     strategy:
       matrix:
+        os: [macos, ubuntu]
         include:
           - os: macos
-            arch: x86
-            build: yarn workspace @danerwilliams/charcoal run build-pkg -t node16-macos-x86 -o "gt-macos-x86-${{ github.sha }}"
+            build: yarn workspace @withgraphite/graphite-cli run build-pkg -t node16-macos -o "gt-macos-x6-${{ github.sha }}"
             artifact-name: gt-macos-x86-${{ github.sha }}
             artifact-path: apps/cli/gt-macos-x86-${{ github.sha }}
           - os: ubuntu
-            arch: x86
             build: yarn workspace @danerwilliams/charcoal run build-pkg -t node16-linux -o "gt-linux-${{ github.sha }}"
             artifact-name: gt-linux-${{ github.sha }}
             artifact-path: apps/cli/gt-linux-${{ github.sha }}
@@ -105,7 +104,7 @@ jobs:
           name: gt-linux-${{ github.sha }}
       - name: Rename files
         run: |
-          mv gt-macos-x86-${{ github.sha }} gt-macos;
+          mv gt-macos-x86-${{ github.sha }} gt-macos-x86;
           mv gt-linux-${{ github.sha }} gt-linux
       - name: Release
         uses: ncipollo/release-action@v1
